# Whatsapp-Bot-With-apis

./: README.md  advice_slip_api.py  bbc_news_api.py  chatbot process.py  covid_api.py  google_news_api.py  intents.json  label_encoder.pickle  main.py  pyproject.toml  quote_api.py  tokenizer.pickle
chat_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
chat_model/variables/: variables.data-00000-of-00001  variables.index
