[tool.poetry]
name = "repl_python3_Whatsapp-Chat-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
twilio = "^6.59.0"
googlenews = "^1.5.8"
covid = "^2.4.1"
news-api = "^1.1.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
